--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,12 @@
-spring.application.name=gymmpas
+spring:
+  # H2 Setting
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  # Database Setting
+  datasource:
+    drvier-class-name: org.h2.Driver
+    url: jdbc:h2:~/test
+    username: sa
+    password:
