--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,14 @@
 spring:
+  # JPA Setting
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
+        show_sql: true
+        format_sql: true
+        use_sql_comments: true
   # H2 Setting
   h2:
     console:
@@ -10,3 +20,11 @@ spring:
     url: jdbc:h2:~/test
     username: sa
     password:
+logging:
+  level:
+    # JPA Setting
+    org:
+      hibernate:
+        type:
+          descriptor:
+            sql: trace
